--- a/styles/style.css
+++ b/styles/style.css
@@ -358,4 +358,323 @@ textarea {
   color: #000;
   padding: 0.2em 0;
 }
+
+.content .section_one {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: unset;
+  height: 785px;
+  background-image: url("https://i.imgur.com/dKw9Z0w.jpg");
+  background-repeat: no-repeat;
+  margin-top: -100px;
+  color: white;
+  height: -200px;
+}
+
+.content .section_two {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: unset;
+  height: 940px;
+  background-image: url("https://i.imgur.com/1YdljcL.jpg");
+  background-repeat: no-repeat;
+  color: white;
+}
+
+.inlet_banner {
+  position: relative;
+  display: inline-block;
+  border-bottom: 4px solid #0367a6;
+  width: 100%;
+  height: 150px;
+}
+
+.logo_banner {
+  position: absolute;
+  display: inline-block;
+  left: 30px;
+  top: 20px;
+}
+
+.nav {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  z-index: 9999;
+  width: 100%;
+  height: 100px;
+}
+
+.nav li {
+  float: right;
+}
+
+.nav a {
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+  background-color: #b0c4de;
+  padding: 36px;
+  width: 200px;
+  border: 1px solid #0367a6;
+}
+
+.section_one h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 46px;
+  font-weight: bold;
+  font-style: italic;
+  margin-left: 150px;
+  width: 800px;
+  margin-top: 40px;
+}
+
+.section_one h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 54px;
+  font-weight: bold;
+  font-style: italic;
+  margin-left: 165px;
+  width: 800px;
+}
+
+.section_one h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 26px;
+  font-style: italic;
+  font-weight: bold;
+  margin-left: 150px;
+  margin-top: 50px;
+  width: 160px;
+}
+
+.section_one p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  margin-right: 230px;
+  margin-top: 200px;
+  text-align: left;
+  text-shadow: -0.5px -0.5px 0 #000, 0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000;
+  margin-left: 150px;
+  width: 800px;
+}
+
+.section_two h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 46px;
+  font-weight: bold;
+  font-style: italic;
+  margin-left: 150px;
+  width: 800px;
+}
+
+.section_two h5 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 54px;
+  font-weight: bold;
+  font-style: italic;
+  margin-left: 165px;
+  width: 800px;
+}
+
+.section_two p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  margin-right: 230px;
+  margin-top: 200px;
+  text-align: right;
+  text-shadow: -0.5px -0.5px 0 #000, 0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000;
+  margin-left: 150px;
+  width: 800px;
+}
+
+.section_two .mainBtn {
+  background-color: #486fa1;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 32px;
+  outline: 0;
+  display: inline-block;
+  margin: 0 auto;
+  height: 50px;
+  padding-top: 15px;
+  margin-top: 200px;
+  margin-left: 700px;
+  width: 200px;
+  border-radius: 30px;
+  border: 2px solid white;
+}
+
+.section_two .optBtn {
+  background-color: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 32px;
+  outline: 0;
+  display: inline-block;
+  margin: 0 auto;
+  height: 50px;
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: -65px;
+  margin-left: 950px;
+  width: 200px;
+  border-radius: 30px;
+  border: 2px solid black;
+}
+
+.formInfo {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin-left: 720px;
+  margin-top: 60px;
+  margin-bottom: -150px;
+  width: 530px;
+}
+
+.formInfo h6 {
+  font-size: 42px;
+  font-weight: bold;
+}
+
+.contact {
+  margin-left: 720px;
+  margin-top: 200px;
+}
+
+.contact input[type=text], .contact select {
+  width: 500px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.contact input[type=submit] {
+  width: 150px;
+  background-color: #486fa1;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.contact .form {
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.contact label {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.additionalForms input[type=text], .additionalForms select {
+  width: 250px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.additionalForms input[type=submit] {
+  width: 150px;
+  background-color: #486fa1;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.additionalForms .form {
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.additionalForms label {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a:hover {
+  background-color: #0367a6;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
+}
+
+a#currentPg.active {
+  background-color: #0367a6;
+}
+
+h3:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+button:focus {
+  outline: 0;
+}
+
+input[type=submit]:hover {
+  background-color: #0367a6;
+}
 /*# sourceMappingURL=style.css.map */
