--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,4 +8,9 @@
 @import "_module";
 @import "_state";
 
-// Nesting (Includes classes, ids, etc)
+// <label for="country">Country</label><br>
+// <select id="country" name="country">
+//   <option value="australia">Australia</option>
+//   <option value="canada">Canada</option>
+//   <option value="usa">USA</option>
+// // </select><br>
